--- a/html5_cheetah.html
+++ b/html5_cheetah.html
@@ -1,57 +1,12 @@
 <!DOCTYPE html>
 <head>
-  <style>
-    video {
-      /* set size and center on page */
-      display: block;
-      height: 200px;
-      position: absolute;
-      top: 0px;
-      bottom: 0px;
-      left: 0px;
-      right: 0px;
-      margin: auto;
-
-      /* defaults */
-      -webkit-filter: hue-rotate(0deg) saturate(1) blur(0);
-      -moz-filter: hue-rotate(0deg) saturate(1) blur(0);
-      -o-filter: hue-rotate(0deg) saturate(1) blur(0);
-      filter: hue-rotate(0deg) saturate(1) blur(0);
-      -webkit-transition: all 40s linear;
-      -moz-transition: all 40s linear;
-      -o-transition: all 40s linear;
-      transition: all 40s linear;
-    }
-    video.melt {
-      /* animation */
-      -webkit-filter: hue-rotate(-180deg) saturate(10) blur(10px);
-      -moz-filter: hue-rotate(-180deg) saturate(10) blur(10px);
-      -o-filter: hue-rotate(-180deg) saturate(10) blur(10px);
-      filter: hue-rotate(-180deg) saturate(10) blur(10px);
-      -webkit-transform: translate(100px, 50px) rotateX(45deg) rotateY(-200deg) rotateZ(10deg);
-      -moz-transform: translate(100px, 50px) rotateX(45deg) rotateY(-200deg) rotateZ(10deg);
-      -o-transform: translate(100px, 50px) rotateX(45deg) rotateY(-200deg) rotateZ(10deg);
-      transform: translate(100px, 50px) rotateX(45deg) rotateY(-200deg) rotateZ(10deg);
-      height: 400px;
-    }
-  </style>
+  <link href="stylesheets/html5_cheetah.css" rel="stylesheet" media="all" type="text/css" />
+  <script src="javascripts/html5_cheetah.js"></script>
 </head>
 <html>
   <body>
     <video src="https://upload.wikimedia.org/wikipedia/commons/6/62/Cheetahs_on_the_Edge_%28Director%27s_Cut%29.ogv" loop=true controls id="vid">
       Your browser does not support the <code>video</code> element.
     </video>
-
-    <script>
-      // skip to the action
-      document.getElementById('vid').addEventListener('loadedmetadata', function() {
-        this.currentTime = 50;
-      }, false);
-      // make it melt
-      document.getElementById('vid').addEventListener('canplay', function() {
-        this.className = "melt";
-        this.play();
-      });
-    </script>
   </body>
 </html>
