--- a/html5_cheetah.html
+++ b/html5_cheetah.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<head>
-  <link href="compiled/stylesheets/html5_cheetah.css" rel="stylesheet" media="all" type="text/css" />
-  <script src="compiled/javascripts/html5_cheetah.js"></script>
-</head>
 <html>
+  <head>
+    <link href='compiled/stylesheets/html5_cheetah.css' media='all' rel='stylesheet' type='text/css'>
+    <script src='compiled/javascripts/html5_cheetah.js'></script>
+  </head>
   <body>
-    <video src="https://upload.wikimedia.org/wikipedia/commons/6/62/Cheetahs_on_the_Edge_%28Director%27s_Cut%29.ogv" loop=true controls id="vid">
+    <video controls='controls' id='vid' loop src='https://upload.wikimedia.org/wikipedia/commons/6/62/Cheetahs_on_the_Edge_%28Director%27s_Cut%29.ogv'>
       Your browser does not support the <code>video</code> element.
     </video>
   </body>
